--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "token": "283122508:AAHZ-wvraHPwafH0hloioV5W59T62WVLcNA",
-  "name": "Frontend Quiz",
-  "category": "Frontend",
-  "description": "JavaScript, HTML and CSS",
+  "name": "Tutu.ru PHP Quiz",
+  "category": "PHP",
+  "description": "Test about PHP",
   "file": "./quiz/php"
 }
