--- a/config.json
+++ b/config.json
@@ -1,7 +1,1 @@
-{
-  "token": "283122508:AAHZ-wvraHPwafH0hloioV5W59T62WVLcNA",
-  "name": "Tutu.ru PHP Quiz",
-  "category": "PHP",
-  "description": "Test about PHP",
-  "file": "./quiz/php"
-}
+config/php.json
